Fix link bug on listcards with z-index changes.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -385,6 +385,7 @@ Use containers when you need a content area that has standard maximum width and 
 
 .finder {
   padding-top: 8rem;
+  z-index: -1000;
 }
 
 /* Lists
@@ -1080,6 +1081,7 @@ code {
   background-color: #fff;
   max-width: 100%;
   position: relative;
+  z-index: 100;
   margin: 0 auto -5rem auto;
 }
 
